--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -219,7 +219,7 @@
 			margin-bottom: _size(element-margin);
 
 			li {
-				display: block;
+				display: inline-block;
 				border-left: 0;
 				margin-left: 0;
 				padding-left: 0;
